# OpenAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
agent/: client.py  main.py  response_api.py  utils.py
agents/misc/: main.py  note.md
docs/superpowers/plans/: 2026-04-22-multi-agent-orchestration-implementation.md  2026-04-24-phase-1-foundation.md
docs/superpowers/specs/: 2026-04-22-multi-agent-system-design-v1.1.md  2026-04-22-multi-agent-system-design.md  2026-04-23-agent-core-manual.md  2026-04-23-agent-core-sdk.md  2026-04-23-agent-evaluation-and-testing.md  2026-04-23-dashboard-and-ops-ui.md  2026-04-23-developer-manual.md  2026-04-23-durable-agent-runs.md  2026-04-23-guardrails.md  2026-04-23-multi-agent-system-design-v1.2.md  2026-04-23-security.md
financial_research/: .env.example  README.md  main.py  manager.py
financial_research/agent_factory/: __init__.py  _config.py  _schemas.py  analysts.py  formatter.py  planner.py  search.py  tools.py  verifier.py  writer.py
financial_research/outputs/: nvidia_fy2025_q4.md  nvidia_fy2025_q4.pptx
mcp_servers/: README.md
mcp_servers/misc/: template.py
mcp_servers/pdf_summary/: README.md  agent.py  mcp_server.py  requirements.txt  run_agent.py
mcp_servers/pdf_summary/data/: summary.html
mcp_servers/pdf_summary/tests/: README.md  test_runner.py
mcp_servers/rfp/: README.md  agent.py  mcp_server.py  pdf_extract.py  prompts.json  requirements.txt  utils.py
ops/grafana/provisioning/dashboards/: dashboards.yaml
sample/: pyproject.toml
sample/services/agents/base/: Dockerfile
sample/services/agents/base/app/: config.py  worker.py
sample/services/agents/file_agent/: .dockerignore  Dockerfile
sample/services/agents/file_agent/app/: __init__.py
sample/services/mcp_gateway/app/: __init__.py  config.py  server.py
sample/services/mcp_gateway/app/observability/: __init__.py
sample/services/orchestrator/: Dockerfile  pyproject.toml
sample/services/orchestrator/app/: __init__.py  config.py
sample/services/orchestrator/app/api/routes/: health.py
sample/services/orchestrator/app/core/: dispatcher.py  router.py
sample/services/orchestrator/app/db/: models.py
sample/services/orchestrator/app/observability/: tracing.py
sample/services/orchestrator/tests/: test_dispatcher.py
services/agents/base/: pyproject.toml
services/agents/base/app/: __init__.py
services/agents/file_agent/: pyproject.toml
services/agents/file_agent/app/: agent.py  config.py
services/common/: alembic.ini  pyproject.toml
services/common/alembic/: env.py
services/common/alembic/versions/: 0001_initial.py
services/common/src/openagent_common/: __init__.py  interfaces.py  logging.py  schemas.py  telemetry.py
services/common/src/openagent_common/db/: __init__.py  models.py
services/common/tests/: conftest.py  test_interfaces.py  test_logging.py  test_models.py  test_schemas.py  test_telemetry.py
services/common/tests/integration/: test_alembic.py
services/mcp_gateway/: Dockerfile  pyproject.toml
services/mcp_gateway/app/: server.py  tool_registry.py
services/mcp_gateway/mcp_servers/: __init__.py
services/mcp_gateway/mcp_servers/file_tools/: __init__.py  server.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/app/: config.py  main.py
services/orchestrator/app/api/routes/: sessions.py
services/orchestrator/app/core/: rate_limiter.py  session.py
services/orchestrator/app/db/: __init__.py  repositories.py
services/orchestrator/app/observability/: __init__.py  logging.py  metrics.py
services/orchestrator/tests/: test_rate_limiter.py  test_router.py  test_session.py
tests/smoke/: test_infra.py
tracing/: tracing_utils.py
