[project]
name = "agents-base"
version = "0.1.0"
description = "Base agent package with Redis Streams consumer"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.2.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "openai-agents>=0.0.11",
    "pydantic-settings>=2.6.0",
    "structlog>=25.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"